--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <title>Coding Photography</title>
 </head>
 <body>
-  
+  <main>
+    <!-- landing page -->
+    <div id="landing">
+      <div id="landing-text">
+        <h1>Coding Photography</h1>
+        <h2>Share ideas through photos</h2>
+        <a href="#images" class="btn" id="view-work">Our Projects</a>
+      </div>
+      <div id="landing-image">
+        <img src="" alt="">
+      </div>
+    </div>
+    <div id="images">
+      <div id="header">
+        <h2>Our projects</h2>
+      </div>
+      <!-- photo #1 -->
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Photo #1</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+    </div>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
