--- a/index.html
+++ b/index.html
@@ -5,35 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Coding Photography</title>
+  <title>Nature Photography</title>
 </head>
 <body>
   <main>
     <!-- landing page -->
     <div id="landing">
       <div id="landing-text">
-        <h1>Coding Photography</h1>
-        <h2>Share ideas through photos</h2>
-        <a href="#images" class="btn" id="view-work">Our Projects</a>
+        <div id="landing-text-inner">
+          <h1>Nature Photography</h1>
+          <h2>Share ideas through photos</h2>
+          <a href="#images" class="btn" id="view-work">Our Projects</a>
+        </div>
       </div>
-      <div id="landing-image">
-        <img src="" alt="">
-      </div>
+      <div id="landing-image"></div>
     </div>
     <div id="images">
       <div id="header">
         <h2>Our projects</h2>
       </div>
       <!-- photo #1 -->
-      <img src="" alt="">
+      <img src="https://source.unsplash.com/1600x900?nature,mountain" alt="photo1">
       <div class="caption">
         <h3>Photo #1</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+      <!-- photo #2 -->
+      <img src="https://source.unsplash.com/1600x900?nature,flowers" alt="photo2">
+      <div class="caption">
+        <h3>Photo #2</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+      <!-- photo #3 -->
+      <img src="https://source.unsplash.com/1600x900?nature,water" alt="photo3">
+      <div class="caption">
+        <h3>Photo #3</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+      <!-- photo #4 -->
+      <img src="https://source.unsplash.com/1600x900?nature,trees" alt="photo4">
+      <div class="caption">
+        <h3>Photo #4</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+      <!-- photo #5 -->
+      <img src="https://source.unsplash.com/1600x900?nature,clouds" alt="photo5">
+      <div class="caption">
+        <h3>Photo #5</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
       </div>
     </div>
   </main>
   <footer>
-
+    <h3>Only one call away</h3>
+    <p>Contact us to collaborate</p>
+    <p>Email: nature@photography.test</p>
+    <p>Phone: (622) 999-9999</p>
   </footer>
 </body>
 </html>
