add jquery to smoth scroll

--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
     <p>Email: nature@photography.test</p>
     <p>Phone: (622) 999-9999</p>
   </footer>
+
+  <script
+  src="http://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
